# genieutils-rs

./: Cargo.toml  Makefile  README.md
genieutils-cli/: Cargo.toml
genieutils-cli/src/: main.rs
genieutils-python/: Cargo.toml  README.md  genieutils_rs.pyi  pyproject.toml
genieutils-python/test/: test_basic.py  test_compare.py
genieutils-rs/: Cargo.toml
genieutils-rs-cli/: Cargo.toml
genieutils-rs-cli/src/: main.rs
genieutils-rs-python/: Cargo.toml
genieutils-rs-python/src/: lib.rs
genieutils-rs-python/test/: test_scratch.py
genieutils-rs/src/: civ.rs  common.rs  datfile.rs  effect.rs  graphic.rs  lib.rs  playercolour.rs  randommaps.rs  sound.rs  task.rs  tech.rs  techtree.rs  terrainblock.rs  terrainrestrictions.rs  unit.rs  unitheaders.rs  versions.rs
genieutils-rspy/: Cargo.toml  Makefile  pyproject.toml
genieutils-rspy/.env/: pyvenv.cfg
genieutils-rspy/src/: common.rs  datfile.rs  lib.rs  playercolour.rs  sound.rs  terrainrestrictions.rs  versions.rs
genieutils-rspy/test/: test_basic.py
genieutils/src/: civ.rs  common.rs  datfile.rs  effect.rs  graphic.rs  lib.rs  randommaps.rs  sound.rs  task.rs  tech.rs  techtree.rs  terrainblock.rs  terrainrestrictions.rs  unit.rs  unitheaders.rs
genieutils/test/: unpack.py
src/: civ.rs  common.rs  datfile.rs  effect.rs  graphic.rs  lib.rs  playercolour.rs  randommaps.rs  sound.rs  task.rs  tech.rs  techtree.rs  terrainrestrictions.rs  unit.rs  unitheaders.rs  versions.rs
test/: .gitignore
