[package]
name = "genieutils-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "genieutils_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.1"
genieutils = { path = "../genieutils", features=["pyo3"] }
